Add google maps with markers

--- a/index.html
+++ b/index.html
@@ -23,18 +23,24 @@
                 </div>
                 <div class="row no-gutters">
                     <div class="col">
-                        <ul id="nav" class="list-inline menucontainer">
-                            <li class="col-6 col-sm-3 ui-menu-color-home list-inline-item menuitem">
+                        <ul id="nav" class="list-inline menucontainer row">
+                            <li class="col-xs-6 col-sm-2 ui-menu-color-home menuitem">
                                 <a href="index.html" class="hvr-sweep-to-bottom"><i class="fa fa-home" aria-hidden="true"></i><span>Home</span></a>
                             </li>
-                            <li class="col-6 col-sm-3 ui-menu-color-resume list-inline-item menuitem">
+                            <li class="col-xs-6 col-sm-2 ui-menu-color-resume menuitem">
                                 <a href="resume.html" class="hvr-sweep-to-bottom"><i class="fa fa-graduation-cap" aria-hidden="true"></i><span>Resume</span></a>
                             </li>
-                            <li class="col-6 col-sm-3 ui-menu-color-contact list-inline-item menuitem">
-                                <a href="contact.html" class="hvr-sweep-to-bottom"><i class="fa fa-comment-o" aria-hidden="true"></i><span>Contact</span></a>
+                            <li class="col-xs-6 col-sm-2 ui-menu-color-contact menuitem">
+                                <a href="contact.html" class="hvr-sweep-to-bottom"><i class=" fa fa-commenting-o" aria-hidden="true"></i><span>Contact</span></a>
                             </li>
-                            <li class="col-6 col-sm-3 ui-menu-color-download list-inline-item menuitem">
-                                <a href="assets/CV/sample-cv.pdf" class="hvr-sweep-to-bottom"><i class="fa fa-download" aria-hidden="true"></i><span>Download CV</span></a>
+                            <li class="col-xs-6 col-sm-2 ui-menu-color-interests menuitem">
+                                <a href="interests.html" class="hvr-sweep-to-bottom"><i class="fa fa-users" aria-hidden="true"></i><span>Interests</span></a>
+                            </li>
+                            <li class="col-xs-6 col-sm-2 ui-menu-color-github menuitem">
+                                <a href="github.html" class="hvr-sweep-to-bottom"><i class="fa fa-github" aria-hidden="true"></i><span>GitHub</span></a>
+                            </li>
+                            <li class="col-xs-6 col-sm-2 ui-menu-color-download menuitem">
+                                <a href="assets/cv/sample-cv.pdf" target="_blank" class="hvr-sweep-to-bottom"><i class="fa fa-download" aria-hidden="true"></i><span>Download CV</span></a>
                             </li>
                         </ul>
                     </div>
@@ -54,34 +60,50 @@
                 </div>
                 <div class="personal-info-item">
                     <div class="key">
-                        <p class="uppercase">Name:</p>
+                        <p class="uppercase">
+                            Name:
+                        </p>
                     </div>
                     <div class="value">
-                        <p>Rosie Odenkirk</p>
+                        <p>
+                            Rosie Odenkirk
+                        </p>
                     </div>
                 </div>
                 <div class="personal-info-item">
                     <div class="key">
-                        <p class="uppercase">Address:</p>
+                        <p class="uppercase">
+                            Address:
+                        </p>
                     </div>
                     <div class="value">
-                        <p>17 Riverdale, Catskills, NY USA</p>
+                        <p>
+                            17 Riverdale, Catskills, NY USA
+                        </p>
                     </div>
                 </div>
                 <div class="personal-info-item">
                     <div class="key">
-                        <p class="uppercase">Phone:</p>
+                        <p class="uppercase">
+                            Phone:
+                        </p>
                     </div>
                     <div class="value">
-                        <p>555 204 5397</p>
+                        <p>
+                            555 204 1973
+                        </p>
                     </div>
                 </div>
                 <div class="personal-info-item">
                     <div class="key">
-                        <p class="uppercase">Email:</p>
+                        <p class="uppercase">
+                            Email:
+                        </p>
                     </div>
                     <div class="value">
-                        <p>rosieodenkirk@gmail.com</p>
+                        <p>
+                            rosie.odenkirk@hansaw.com
+                        </p>
                     </div>
                 </div>
             </div>
@@ -134,6 +156,7 @@
                 </div>
             </div>
         </div>
+        
     </section>
     <footer class="container-fluid">
         <div id="footer-details" class="row">
@@ -147,7 +170,7 @@
                 <h5 class="uppercase general-sub">Download</h5>
                 <p class="inline-block">
                     Need a printable version of my CV? Download it here.
-                    <a href="#" target="_blank" class="cv-pdf">
+                    <a href="assets/cv/sample-cv.pdf" target="_blank" class="cv-pdf">
                         <i class="fa fa-download" aria-hidden="true"></i>
                         <span class="sr-only">Download link.</span>
                     </a>
